--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<ul>
 							<li class="current"><a href=#about>ABOUT</a></li>
 							<li class="current"><a href=#media>MEDIA</a></li>
-							<li class="current"><a href=#press>PRESS</a></li>
+							<li class="current"><a href=press.html>PRESS</a></li>
 						</ul>
 					</nav>
 				</header>
