--- a/press.html
+++ b/press.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Benjamin Porter</title>
+		<title>Underworld Dungeon - Press Kit</title>
 		<link href="thestyle.css" rel="stylesheet" type="text/css">
 	</head>
 
@@ -13,8 +13,7 @@
 		<div class="uk-container uk-container-center">
 			<div class="uk-grid">
 				<div id="navigation" class="uk-width-medium-1-4">
-					<h1 class="nav-header">Benjamin Porter</h1>
-					<a class="nav-header" href="index.php" target="_self">press kit</a></strong>
+					<h1 class="nav-header">Underworld Dungeon</h1>
 					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
 						<li><a href="#history">History</a></li>
@@ -27,42 +26,47 @@
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
-				<div id="content" class="uk-width-medium-3-4"><img src="moonman/images/header.png" class="header">					<div class="uk-grid">
+				<div id="content" class="uk-width-medium-3-4"><img src="images/header.png" class="header">					<div class="uk-grid">
 						<div class="uk-width-medium-2-6">
 							<h2 id="factsheet">Factsheet</h2>
 							<p>
 								<strong>Developer:</strong><br/>
-								<a href="index.php">Benjamin Porter</a><br/>
-								Based in Melbourne, Australia
+								<a href="https://twitter.com/InfernoSoulDev">InfernoSoul</a><br/>
+								Based in Dubai, UAE
 							</p>
 							<p>
 								<strong>Release date:</strong><br/>
-								Late 2015
+								July 31, 2017
 							</p>
 
 							<p>
-								<strong>Platforms:</strong><br /><a href="http://moonman.io">PC / Steam</a><br/>							</p>
+								<strong>Platforms:</strong><br /><a href="http://store.steampowered.com/app/520300/Underworld_Dungeon/">Steam (Windows, OSX, Linux)</a><br/>							</p>
 							<p>
 								<strong>Website:</strong><br/>
-								<a href="http://moonman.io">moonman.io</a>
+								<a href="https://infernosoul.github.io/">infernosoul.github.io/</a>
 							</p>
-							<p>
-								<strong>Regular Price:</strong><br/>-							</p>
 						</div>
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2>
 							<p>
-	Moonman is an adventure game starring a smiling green moonman. It is set on a nocturnal planet orbited by many moons. Every new game generates a unique world containing towns, forests, tombs, islands, and alien landscapes. 
-
-The goal of the game is to find seven moon fragments that have fallen from the sky. These fragments are to power a giant star-machine that will bring light back into the world. Moonman can be thought of as a viridescent blend of games like Spelunky, Binding of Isaac, and Terraria.
-
-In the game, the main character, Moonman, must search for fragments of moons that are scattered around the world. The fragments may have been hidden in caves or tombs, ingested by large creatures, or hoarded by agoraphobic hermits. 
-	</p>
-							<h2 id="history">History</h2><p>
-	Moonman began life back in 2011 as a green ASCII smiley face. Over the last 3 years his world has evolved significantly but Moonman has kept his trademark green smiley face. You can read all about the gamedev journey in the 140+ pages of the development log -- which includes mock-ups, screenshots, technical info, and game design banter.
-	</p>							<h2>Features</h2>
-							<ul><li>A quest that will take you through alien landscapes and towns;</li><li>peculiar inhabitants to talk to; </li><li>resources to collect, harvest, mine and trade;</li><li>a fully destructible world;</li><li>a plethora of items to wield, wear, throw, fire, and craft; </li><li>monstrous and odd creatures to hit with things; and</li><li>ancient puzzle-machines to unlock.</li>							</ul>
-						</div>
+							Underworld Dungeon is a rogue-like action-adventure in which you explore a ruined Greek dungeon hidden beneath the depths of the Underworld. As you dig deeper, ancient weapons and armor will be uncovered which you can be combine to create more powerful gear. You will need all the items you can scavenge and craft to conquer this challenging dungeon; a dungeon that masks unspeakable horrors, mythical secrets and finally, the promise of a lost soul that awaits at the end of it all...  
+							</p>					
+							<h2>Featurelist</h2>
+							<ul>
+							  <li>Over 150 weapons, armour pieces and gear</li>
+							  <li>A semi-permament death system, allowing for new items to be
+								unlocked for future playthroughs</li>
+							  <li>A fully fledged crafting system, allowing for the most
+								devastating of weapons</li>
+							  <li>Full Steamworks support, with Achievements and Leaderboards
+								included</li>
+							  <li>Many bosses and enemies for the player to encounter during
+								runs</li>
+							  <li>Many secrets and NPC's to be discovered inside the dungeon</li>
+							  <li>Continual support for the game for at least 12 months
+								post-release</li>
+							</ul>
+							</div>
 					</div>
 
 					<hr>
