--- a/press.html
+++ b/press.html
@@ -95,7 +95,7 @@ p{
 <div id="credits" class="col-md-8">
     <h2>Team</h2>
     <p><strong>Ethan Tang</strong><br />
-        Developing / Art Design</p>
+        Developing / Art Design / Marketing</p>
     <p><strong>Noel Andersen</strong><br />
         Publishing / Marketing</p>
     <p><strong>Pixel Noise</strong><br />
