--- a/index.html
+++ b/index.html
@@ -60,18 +60,19 @@
 					</p>
 					<a name="media">
 					<p>
-					<center><img src="http://i.imgur.com/wAlD5U4.gif" style="position: relative;"></center>
-					<center><img src="http://i.imgur.com/dluPQum.gif" style="position: relative;"></center>
-					<center><img src="http://i.imgur.com/dBdzwPG.gif" style="position: relative;"></center>
-					<center><img src="http://i.imgur.com/6LDLDbL.gif" style="position: relative;"></center>
-					<center><img src="http://i.imgur.com/Jcu4O3T.gif" style="position: relative;"></center>
-					<center><img src="http://i.imgur.com/7bKeu4O.gif" style="position: relative;"></center>
-					<center><img src="http://i.imgur.com/aUHLQcf.gif" style="position: relative;"></center>
+					<center><img src="images/3.gif" style="position: relative;"></center>
+					<center><img src="images/1.png" style="position: relative;"></center>
+					<center><img src="images/4.gif" style="position: relative;"></center>
+					<center><img src="images/5.gif" style="position: relative;"></center>
+					<center><img src="images/8.gif" style="position: relative;"></center>
+					<center><img src="images/9.gif" style="position: relative;"></center>
+					<center><img src="images/10.gif" style="position: relative;"></center>
+					<center><img src="images/11.gif" style="position: relative;"></center>
 					</p>
 					<br>
 					<h2 style = "text-align: center; padding-top: 10px"><font color="white">DEVELOPER</font></h2>
-					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong>is currently being developed by a 
-					<br>freshman who loves making and playing games.</font>
+					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong>is currently being developed by Ethan T (InfernoSoul), 
+					<br>a teenager who loves making and playing games.</font>
 					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
 					</p>
 					
