--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					</p>
 					<br>
 					<h2 style = "text-align: center; padding-top: 10px"><font color="white">DEVELOPER</font></h2>
-					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong> is currently being developed by Ethan T (InfernoSoul), 
+					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong> is currently being developed by <font color="#009999"><strong>Ethan T (InfernoSoul)</strong></font>, 
 					<br>a teenager who loves making and playing games.</font>
 					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
 					</p>
