--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 
 <html>
+
 	<head>
 		<title>Underworld Dungeon</title>
 		<meta charset="utf-8" />
@@ -46,7 +47,15 @@
 			<!-- Main -->
 				<article id="main">
 					<center><iframe src="https://www.youtube.com/embed/jxMbTWPQKRY" frameborder="0" style="padding-bottom: 150px; position: relative; width: 720px; height: 540px;"></iframe></center>
+		
+					<center>
+					<div class="brightness"><a href="http://store.steampowered.com/app/520300"><img src="images/steamlogo.png"></a>
+					<a href="https://twitter.com/InfernoSoulDev"><img src="images/twitterlogo.png"></a>
+					<a href="https://www.kickstarter.com/projects/441982227/underworld-dungeon"><img src="images/kickstarterlogo.png"></a>
+					</div>
+					</center>
 					
+					<br></br>
 					
 					<a name="about">
 					<h2 style = "text-align: center"><font color="white">UNDERWORLD DUNGEON</font></h2>
