--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 					<br>a teen who loves making and playing games.</font>
 					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
 					</p>
+					<h2 style = "text-align: center; padding-top: 10px"><font color="white">PUBLISHER</font></h2>
+					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong> is currently being published by <font color="#009999"><a href="https://twitter.com/PandaFromJaf">Panda Games</a></font>, 
+					<br>a teen who loves making and playing games.</font>
+					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
+					</p>
 					
 					
 
