--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
 					<center><img src="images/10.gif" style="position: relative;"></center>
 					</p>
 					<br>
-					<h2 style = "text-align: center; padding-top: 10px"><font color="white">DEVELOPER</font></h2>
+					<h2 style = "text-align: center; padding-top: 10px"><font color="white">TEAM</font></h2>
 					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong> is currently being developed by <font color="#009999"><a href="https://twitter.com/InfernoSoulDev">Ethan (InfernoSoul)</a></font>, 
 					<br>a teen who loves making and playing games.</font>
 					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
+					<br>Publisher: Panda Games</br>
+					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a></br>
 					</p>
 					
 					
