--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong> is currently being developed by <font color="#009999"><a href="https://twitter.com/InfernoSoulDev">Ethan (InfernoSoul)</a></font>, 
 					<br>a teen who loves making and playing games.</font>
 					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
-					<br>Publisher: Panda Games</br>
-					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a></br>
+					<p style = "text-align: center"><font color="#a6a6a6"><br>Publisher: Panda Games</p>
+					<p style = "text-align: center"><font color="#a6a6a6"><br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a></p>
 					</p>
 					
 					
