--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
 					<br>
 					<h2 style = "text-align: center; padding-top: 10px"><font color="white">TEAM</font></h2>
 					<p style = "text-align: center"><font color="#a6a6a6"><strong>Underworld Dungeon</strong> is currently being developed by <font color="#009999"><a href="https://twitter.com/InfernoSoulDev">Ethan (InfernoSoul)</a></font>, 
-					<br>a teen who loves making and playing games.</font>
+					<br>a teen who loves making and playing games.
+					<br>Publisher: Panda Games
+					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a>
+					</font>
 					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
-					<p style = "text-align: center"><font color="#a6a6a6"><br>Publisher: Panda Games</p>
-					<p style = "text-align: center"><font color="#a6a6a6"><br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a></p>
 					</p>
 					
 					
