--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<br>Publisher: <a href="https://twitter.com/PandaFromJaf">Panda Games</a>
 					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a>
 					</font>
-					<br><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px">
+					<br><a href="https://twitter.com/InfernoSoulDev"><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px"></a>
 					</p>
 					
 					
