--- a/press.html
+++ b/press.html
@@ -37,7 +37,7 @@ p{
   margin: 15px 0;
 }</style></head><body><div class="container"><div id="presskit"><div class="row"><div class="col-md-3"><h1>Underworld Dungeon</h1><ul class="nav nav-pills nav-pills-igdb nav-stacked">
 
-<li><a href="#factsheet">Factsheet</a></li><li><a href="#description">Description</a></li><li><a href="#videos">Videos</a></li><li><a href="#images">Images</a></li><li><a href="#contact">Contact</a></li></ul><div class="well"><div>Underworld Dungeon<br />RELEASE DATE: July 31, 2017<br />PLATFORMS: Microsoft Windows, Mac OSX, Linux<br />DEVELOPER:   InfernoSoul <br />PUBLISHERS:   InfernoSoul, PandaGames <br /></div></div></div><div class="col-md-9"><div class="row"><img src="images/header.png" class="header">
+<li><a href="#factsheet">Factsheet</a></li><li><a href="#description">Description</a></li><li><a href="#videos">Videos</a></li><li><a href="#images">Images</a></li><li><a href="#logos">Logos</a></li><li><a href="#contact">Contact</a></li></ul><div class="well"><div>Underworld Dungeon<br />RELEASE DATE: July 31, 2017<br />PLATFORMS: Microsoft Windows, Mac OSX, Linux<br />DEVELOPER:   InfernoSoul <br />PUBLISHERS:   InfernoSoul, PandaGames <br /></div></div></div><div class="col-md-9"><div class="row"><img src="images/header.png" class="header">
 <div class="col-md-4">
 <h2 id="factsheet">Factsheet</h2><div class="mar-top mar-bottom"><strong>Developer:</strong><br/><a href="https://twitter.com/InfernoSoulDev">InfernoSoul</a><br>Based in Dubai, UAE</br></div>
 
@@ -99,12 +99,13 @@ p{
 <div class="uk-width-medium-1-2"><a href="images/9.gif"><img src="images/9.gif"/></a></div>
 <div class="uk-width-medium-1-2"><a href="images/10.gif"><img src="images/10.gif"/></a></div>
 <div class="uk-width-medium-1-2"><a href="images/11.png"><img src="images/11.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/02Q12sI.png"><img src="images/12.png"/></a></div>
 <div class="uk-width-medium-1-2"></div></div> <hr>	
 
 <p>There are far more images available for  Underworld Dungeon, but these are the ones we felt would be most useful to you. If you have specific requests, please do contact us!</p><hr /><div class="row"><div class="col-md-12">
 
 <p>
-<h2 id="images">Logos</h2>
+<h2 id="logos">Logos</h2>
         <a href="images/infernosoul.png"><img style="width: 128px; height: 128px;" src="images/infernosoul.png" alt="logo" /></a>
 			<a href="images/pandagames.png"><img
             src="images/pandagames.png" alt="logo" /></a> 
