--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</p>
 					<br>
 					<h2 style = "text-align: center; padding-top: 10px"><font color="white">TEAM</font></h2>
-					<p style = "text-align: center"><font color="#a6a6a6">Developer: <a href="https://twitter.com/InfernoSoulDev">Ethan (InfernoSoul)</a>
+					<p style = "text-align: center"><font color="#a6a6a6">Developer: <a href="https://twitter.com/InfernoSoulDev">Inferno Soul</a>
 					<br>Publisher: <a href="https://twitter.com/PandaFromJaf">Panda Games</a>
 					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a>
 					</font>
