--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<a name="about">
 					<h2 style = "text-align: center"><font color="white">UNDERWORLD DUNGEON</font></h2>
 					<center><div style="width:550px;" "text-align: center">
-						<p style = "text-align: center"><font color="#cccccc"><strong>Underworld Dungeon</strong> is a 2D procedurally generated rogue-like adventure with a challenging combat system, inspired by Binding of Isaac, Dark Souls and Terraria.</font></p>
+						<p style = "text-align: center"><font color="#cccccc"><strong>Underworld Dungeon</strong> is a 2D procedurally generated rogue-like adventure with a challenging combat system, inspired by Binding of Isaac and Dark Souls.</font></p>
 						
 					</div></center>
 					<p style = "text-align: center"><font color="#a6a6a6"><font color="#009999"><strong>Explore</strong></font> a dungeon filled with <strong>demonic creatures</strong> and <strong>epic loot</strong></font>
