--- a/press.html
+++ b/press.html
@@ -99,6 +99,12 @@ p{
 <div class="uk-width-medium-1-2"><a href="images/9.gif"><img src="images/9.gif"/></a></div>
 <div class="uk-width-medium-1-2"><a href="images/10.gif"><img src="images/10.gif"/></a></div>
 <div class="uk-width-medium-1-2"><a href="images/11.png"><img src="images/11.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/oM1RVXV.png"><img src="images/13.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/6qtYc34.png"><img src="images/14.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/OnUxXV7.png"><img src="images/15.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/2youxSj.png"><img src="images/16.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/TrbkVwH.png"><img src="images/17.png"/></a></div>
+<div class="uk-width-medium-1-2"><a href="http://i.imgur.com/84M8PnV.png"><img src="images/18.png"/></a></div>
 <div class="uk-width-medium-1-2"><a href="http://i.imgur.com/02Q12sI.png"><img src="images/12.png"/></a></div>
 <div class="uk-width-medium-1-2"></div></div> <hr>	
 
