--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<h2 style = "text-align: center; padding-top: 10px"><font color="white">TEAM</font></h2>
 					<p style = "text-align: center"><font color="#a6a6a6">Developer: <a href="https://twitter.com/InfernoSoulDev">Inferno Soul</a>
 					<br>Publisher: <a href="https://twitter.com/PandaFromJaf">Panda Games</a>
-					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a>
+					<br>Audio: <a href="https://soundcloud.com/pixel-noise">Pixel Noise</a>, <a href="https://soundcloud.com/hodgetrey">Trey Hodge</a>
 					</font>
 					<br><a href="https://twitter.com/InfernoSoulDev"><img src="http://i.imgur.com/3UZNgOd.gif" style="padding-bottom: 50px"></a>
 					</p>
