--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				
 			<!-- Main -->
 				<article id="main">
-					<center><iframe src="https://www.youtube.com/embed/qDqCMjQBVtw" frameborder="0" style="padding-bottom: 150px; position: relative; width: 640px; height: 510px;"></iframe></center>
+					<center><iframe src="" frameborder="0" style="padding-bottom: 150px; position: relative; width: 640px; height: 510px;"></iframe></center>
 		
 					<center>
 					<div class="brightness"><a href="http://store.steampowered.com/app/520300"><img src="images/steamlogo.png"></a>
